platform/openbao/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
  labels:
    name: openbao
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
