platform/openbao/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openbao
  namespace: openbao
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`openbao.internal.sever-it.com`)
      services:
        - name: openbao
          port: 8200
  tls:
    secretName: openbao-tls-cert
